Add picture and content to index.htm

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>My site</title>
 
+    <style>
+        #profile {
+            float: left;
+        }
+    </style>
+</head>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+        </nav>
+    </header>
+    <div id="content">
+        <img id="profile" src="image/profile.png" width="10%" height="10%" />
+        <p>Cool picture</p>
+    </div>
 </body>
 </html>
