--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>My site</title>
-
-    <style>
-        #profile {
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="css\style.css">
 </head>
+<body>
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -17,6 +13,12 @@
     <div id="content">
         <img id="profile" src="image/profile.png" width="10%" height="10%" />
         <p>Cool picture</p>
+
+
     </div>
+    <footer>
+        <p>Build Your Own Website</p>
+        <p>-- TASK --</p>
+    </footer>
 </body>
 </html>
