--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>My site</title>
@@ -8,17 +9,17 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
     <div id="content">
         <img id="profile" src="image/profile.png" width="10%" height="10%" />
         <p>Cool picture</p>
-
-
     </div>
     <footer>
-        <p>Build Your Own Website</p>
-        <p>-- TASK --</p>
+        <p>Post by: poster</p>
+        <p>nannannan@batman.com</p>
     </footer>
 </body>
 </html>
